--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,24 +1,14 @@
+{{loginCorrect}}
 <div>
-    <div>
-        <app-menu></app-menu>
-
+    <div class="text-center">
+        <div *ngIf="cargando">
+                <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </div>
+        <div *ngIf="!cargando && loginCorrect" >
+            <app-menu></app-menu>
+        </div>
+    </div>
+    <div *ngIf="!cargando" >
         <router-outlet></router-outlet>
     </div>
-
-
-    <!-- <div>
-        <div *ngIf="cargando" class="text-center">
-            <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-        </div>
-        <div *ngIf="!cargando">
-            <app-login></app-login>
-        </div>
-        <div *ngIf="!cargando">
-            <app-register></app-register>
-        </div>
-    </div> -->
-    
 </div>
-
-
-
